added images and icons

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fa-thin fa-folders"></i>
+                                <i class="fas fa-cubes"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Other</h3>
@@ -185,7 +185,7 @@
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="service-item">
                             <div class="service-icon">
-                                <i class="fa-brands fa-folders"></i>
+                                <i class="fas fa-microchip"></i>
                             </div>
                             <div class="service-text">
                                 <h3>Hardware</h3>
@@ -277,7 +277,7 @@ In my free time I select students that are interested in designing and building 
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-1.jpg" alt="Image">
+                                <img src="img/other.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3>Ticketing Software <em>(pty)</em></h3>
@@ -287,7 +287,7 @@ In my free time I select students that are interested in designing and building 
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-3.jpg" alt="Image">
+                                <img src="img/colorsense.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3>Color Sensing Puzzle</h3>
@@ -299,7 +299,7 @@ In my free time I select students that are interested in designing and building 
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-4.jpg" alt="Image">
+                                <img src="img/listenup.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3>Listen Up</h3>
@@ -310,7 +310,7 @@ In my free time I select students that are interested in designing and building 
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-5.jpg" alt="Image">
+                                <img src="img/target.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3>Nerf Target Puzzle</h3>
@@ -321,7 +321,7 @@ In my free time I select students that are interested in designing and building 
                     <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.8s">
                         <div class="portfolio-wrap">
                             <div class="portfolio-img">
-                                <img src="img/portfolio-5.jpg" alt="Image">
+                                <img src="img/chain.jpg" alt="Image">
                             </div>
                             <div class="portfolio-text">
                                 <h3>Markov Generator</h3>
