added contact info label

--- a/index.html
+++ b/index.html
@@ -343,7 +343,9 @@ In my free time I select students that are interested in designing and building 
                         <div class="footer-info">
                             <h2>Zachary Droge</h2>
                             <h3>Philadelphia, PA. / Remote</h3>
+                            <h5>Contact Info:</h5>
                             <div class="footer-menu">
+                                
                                 <p>zacharydroge@me.com</p>
                             </div>
                             <div class="footer-social">
