--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         
                         <div class="hero-content">
                             <div class="hero-text">
-                                <p>Hi, My name is</p>
+                                <p>Hi, my name is</p>
                                 <h1>Zachary A. Droge</h1>
                                 <p>I am a</p>
                                 <h2></h2>
