added alt text to image

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.0s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/other.jpg" alt="Image">
+                            <img src="img/other.jpg" alt="Image of ticketing software">
                         </div>
                         <div class="portfolio-text">
                             <h3>Ticketing Software <em>(pty)</em></h3>
@@ -315,7 +315,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/colorsense.jpg" alt="Image">
+                            <img src="img/colorsense.jpg" alt="Image or color scanner puzzle hardware">
                         </div>
                         <div class="portfolio-text">
                             <h3>Color Sensing Puzzle</h3>
@@ -327,7 +327,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/listenup.jpg" alt="Image">
+                            <img src="img/listenup.jpg" alt="Image of listen up website">
                         </div>
                         <div class="portfolio-text">
                             <h3>Listen Up</h3>
@@ -335,10 +335,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.6s">
+
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/doggiedepot.jpg" alt="Image">
+                            <img src="img/doggiedepot.jpg" alt="Image of vyndio.com splash page">
                         </div>
                         <div class="portfolio-text">
                             <h3>Dog Park Site (e.g.)</h3>
@@ -346,10 +347,11 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/target.jpg" alt="Image">
+                            <img src="img/target.jpg" alt="Image of nerf puzzle gif of hardware">
                         </div>
                         <div class="portfolio-text">
                             <h3>Nerf Target Puzzle</h3>
@@ -360,7 +362,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.8s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/chain.jpg" alt="Image">
+                            <img src="img/chain.jpg" alt="Image of Markov Generator code">
                         </div>
                         <div class="portfolio-text">
                             <h3>Markov Generator</h3>
