--- a/index.html
+++ b/index.html
@@ -312,6 +312,19 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="portfolio-wrap">
+                        <div class="portfolio-img">
+                            <img src="https://www.stackimages.xyz/l/stackimages" alt="Image of stackimages logo">
+                        </div>
+                        <div class="portfolio-text">
+                            <h3>Stack Images - images manipulation deployed API</h3>
+                            <a class="btn" href="https://www.stackimages.xyz">Stack Images Website</a>
+                        </div>
+                    </div>
+                </div>
+                
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-2 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
