--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                         </div>
                         <div class="portfolio-text">
                             <h3>Stack Images - images manipulation deployed API</h3>
-                            <a class="btn" href="https://www.stackimages.xyz">Stack Images Website</a>
+                            <a class="btn" href="https://www.stackimages.xyz">></a>
                         </div>
                     </div>
                 </div>
