--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             <img src="https://www.stackimages.xyz/l/stackimages" alt="Image of stackimages logo">
                         </div>
                         <div class="portfolio-text">
-                            <h3>Stack Images - images manipulation deployed API</h3>
+                            <h3>Stack Images</h3>
                             <a class="btn" href="https://www.stackimages.xyz">></a>
                         </div>
                     </div>
