--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
                 <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item filter-1 wow fadeInUp" data-wow-delay="0.2s">
                     <div class="portfolio-wrap">
                         <div class="portfolio-img">
-                            <img src="img/doggiedepot.jpg" alt="Image of vyndio.com splash page">
+                            <img src="img/doggiedepot.jpg" alt="Image of splash page">
                         </div>
                         <div class="portfolio-text">
                             <h3>Dog Park Site (e.g.)</h3>
-                            <a class="btn" href="http://www.vyndio.com">></a>
+                            <a class="btn" href="https://github.com/zacharyad/palmer_doggie_depot_site">></a>
                         </div>
                     </div>
                 </div>
